# WpsConnectionLibrary

./: README.md  jitpack.yml  settings.gradle
.github/workflows/: ci.yml  release.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/assets/: iw-32  libcrypto.so.3  libssl.so.3  pin.db  pixiedust  pixiedust-32  wpa_cli  wpa_supplicant  wpa_supplicant-32  wpa_supplicant.conf
lib/src/main/cpp/: CMakeLists.txt
lib/src/main/cpp/jni/: wpsnative_jni.c  wpsnative_jni.h
lib/src/main/cpp/libnl-generated/route/: pktloc_grammar.c  pktloc_grammar.h  pktloc_syntax.c  pktloc_syntax.h
lib/src/main/cpp/libnl-generated/route/cls/: ematch_grammar.c  ematch_grammar.h  ematch_syntax.c  ematch_syntax.h
lib/src/main/cpp/pixiewps/: pixiewps_wrapper.c  pixiewps_wrapper.h
lib/src/main/cpp/pixiewps/patches/: Makefile  pixiewps.c  pixiewps.h
lib/src/main/cpp/supplicant/: supplicant_launcher.c  supplicant_launcher.h  wpa_supplicant_defconfig
lib/src/main/cpp/wpa_ctrl/: wpa_ctrl_wrapper.c  wpa_ctrl_wrapper.h
lib/src/main/java/sangiorgi/wps/lib/: ConnectionUpdateCallback.java  WpsConnectionManager.java  WpsLibConfig.java
lib/src/main/java/sangiorgi/wps/lib/assets/: AssetExtractor.java  BinaryAsset.java  WpaToolsInitializer.java  WpaToolsPaths.java
lib/src/main/java/sangiorgi/wps/lib/commands/: CommandConfig.java  CommandFactory.java  CommandResult.java  GlobalControlCommand.java  PixieDustCommand.java  WpaCliCommand.java  WpaSupplicantCommand.java  WpsCommand.java
lib/src/main/java/sangiorgi/wps/lib/handlers/: ConnectionHandler.java
lib/src/main/java/sangiorgi/wps/lib/models/: NetworkToTest.java  PixieDustParameters.java
lib/src/main/java/sangiorgi/wps/lib/ndk/: WpsConfig.java  WpsNative.java  WpsResult.java
lib/src/main/java/sangiorgi/wps/lib/services/: ConnectionService.java  ConnectionStateManager.java  PinDatabaseService.java  PinValidationService.java  PixieDustExecutor.java  WpaSupplicantSession.java  WpsExecutor.java  WpsResult.java
lib/src/main/java/sangiorgi/wps/lib/utils/: NetworkInterfaceUtils.java  PinUtils.java  WpsPixieExtractor.java
lib/src/main/res/values/: strings.xml
lib/src/test/java/sangiorgi/wps/lib/: ConnectionUpdateCallbackTest.java  WpsConnectionManagerTest.java  WpsLibConfigTest.java
lib/src/test/java/sangiorgi/wps/lib/assets/: AssetExtractorTest.java  BinaryAssetTest.java  WpaToolsPathsTest.java
lib/src/test/java/sangiorgi/wps/lib/commands/: CommandConfigTest.java  CommandFactoryTest.java  CommandResultTest.java  GlobalControlCommandTest.java  PixieDustCommandTest.java  WpaCliCommandTest.java  WpaSupplicantCommandTest.java  WpsCommandTest.java
lib/src/test/java/sangiorgi/wps/lib/models/: NetworkToTestTest.java  PixieDustParametersTest.java
lib/src/test/java/sangiorgi/wps/lib/ndk/: WpsNativeTest.java  WpsResultTest.java
lib/src/test/java/sangiorgi/wps/lib/services/: ConnectionFlowTest.java  PinDatabaseServiceTest.java  PinValidationServiceTest.java  PixieDustResultTest.java  WpsExecutorTest.java  WpsResultTest.java
lib/src/test/java/sangiorgi/wps/lib/utils/: WpsPixieExtractorTest.java
